<resources>
    <string name="app_name">BRA App(BAWASLU Relawan Activity)</string>
    <string name="caption_label">Caption berita</string>
    <string name="caption_forum_label">Tuliskan judul forum disini</string>
    <string name="comment_caption_label">Tulis komentar disini</string>
    <string name="answer_caption_label">Tulis jawaban disini</string>
    <string name="field_label">E-mail/Username/No Handphone</string>
    <string name="field_sub_comment_label">Tulis komentar disini</string>
    <string name="email_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="masuk_label">Masuk</string>
    <string name="take_quiz_label">Mulai Kuis</string>
    <string name="send_quiz_label">Kirim Jawaban</string>
    <string name="quiz_score_label">Skor Anda di kuis ini: </string>
    <string name="quiz_total_score_label">Total skor kuis ini: </string>
    <string name="error_youtube_label">There was an error initializing the YouTube Player</string>
    <string name="submit_label">Submit</string>
    <string name="belum_punya_akun_label">Belum punya akun?</string>
    <string name="daftar_label">Daftar</string>
    <string name="add_news_label">Tambah Berita</string>
    <string name="add_comment_label">Tambah Komentar</string>
    <string name="add_answer_label">Tambah Jawaban</string>
    <string name="version_name">Version Name</string>
    <string name="add_forum_label">Tambah Forum</string>
    <string name="materi_label">Detail Materi</string>
    <string name="notifikasi_label">Notifikasi</string>
    <string name="detail_berita_label">Detail Berita</string>
    <string name="detail_forum_label">Detail Forum</string>
    <string name="comment_numbers_label">\u2022 9 Komentar</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="pastikan_internet_label">Mohon pastikan anda terhubung dengan Internet</string>
    <string name="exit_app_label">Apakah anda ingin keluar dari aplikasi ini?</string>
    <string name="ensure_quiz_label">Apakah anda ingin mulai mengerjakan kuis ini?</string>
    <string name="ensure_challenge_label">Apakah anda ingin mengikuti challenge ini?</string>
    <string name="mohon_tunggu_label">Mohon tunggu sedang dalam proses</string>
    <string name="informasi_akun_label">INFORMASI AKUN</string>
    <string name="username_label">Username</string>
    <string name="username_activity_label">membuat materi</string>
    <string name="date_label">12 Februari 2018</string>
    <string name="courtesy">Dibuat oleh</string>
    <string name="material_type">suplemen</string>
    <string name="material_author_label">Achmad</string>
    <string name="material_default_title">Judul Materi</string>
    <string name="material_default_download_button">Unduh Materi</string>
    <string name="material_default_text">Lorem Ipsum dolor sit amet, consetrur adispicing elit, sed do eiusmod tempor incididunt</string>
    <string name="post_title_label">Berita Terbaru Peraturan Peraturan Peraturan</string>
    <string name="post_content_label">Lorem Ipsum dolor sit amet, consetrur adispicing elit, sed do eiusmod tempor incididunt</string>
    <string name="data_pribadi_label">DATA PRIBADI SESUAI KTP</string>
    <string name="no_ktp_label">No. KTP</string>
    <string name="nama_sesuai_ktp_label">Nama</string>
    <string name="no_handphone_label">No Handphone</string>
    <string name="provinsi_label">Provinsi</string>
    <string name="kota_label">Kota</string>
    <string name="kecamatan_label">Kecamatan</string>
    <string name="kelurahan_label">Kelurahan</string>
    <string name="alamat_label">Alamat</string>
    <string name="kode_kelas_label">Kode kelas</string>
    <string name="kode_referensi">Kode referensi</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">OKE</string>
    <string name="start">LOGIN</string>
    <string name="slide_title_berita">Berita</string>
    <string name="slide_title_profile">Profil</string>
    <string name="slide_title_log_user">Log Kegiatan</string>
    <string name="slide_title_diskusi">Forum</string>
    <string name="slide_title_tugas">Tugas</string>
    <string name="slide_title_materi">Materi</string>
    <string name="slide_1_title">Bawaslu Relawan Activity</string>
    <string name="slide_1_desc">Selamat Anda sudah menjadi anggota</string>
    <string name="slide_2_title">Materi</string>
    <string name="slide_2_desc">Materi berupa unduhan berkas, kasus dan video belajar dari pemateri yang disediakan oleh Bawaslu</string>
    <string name="slide_4_title">Diskusi</string>
    <string name="slide_4_desc">Berdialog secara aktif untuk mempererat hubungan kebersamaan dan rasa saling memiliki dan bersaudara</string>
    <string name="slide_3_title">Berita</string>
    <string name="slide_3_desc">Laporkan berita kegiatan Anda dan dapatkan poinnya.</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="menu_more">Lainnya</string>
    <string name="menu_sort">Urutkan</string>
    <string name="menu_search">Cari</string>
    <string name="menu_notification">Pemberitahuan</string>
    <string name="menu_leaderboard">Papan Pemenang</string>
    <string name="menu_list_quiz">Daftar Kuis</string>
    <string name="quiz_title">tes kuis 12</string>
    <string name="example_question">1. Ini contoh pertanyaan</string>
    <string name="peringkat">#1</string>
    <string name="level">Tingkat Kesulitan</string>
    <string name="poin">100</string>
    <string name="poin_label">poin</string>
    <string name="tambah_hashtag_label">Tambah hashtag (opsional)</string>
    <string name="tambah_foto_label">Tambah foto (opsional)</string>
    <string name="jawab_challenge">Jawab Challenge (opsional)</string>
    <string name="tuliskan_hashtag_label">Tuliskan hashtag disini (tanpa #)</string>
    <string name="ketuk_melihat_galeri">Ketuk disini untuk memilih foto pada galeri</string>
    <string name="menu_quiz">Kuis</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_log_out">Keluar</string>
    <string name="sort_date">Waktu upload</string>
    <string name="sort_upvote">Jumlah upvote</string>
    <string name="sort_downvote">Jumlah downvote</string>
    <string name="sort_favorite">Jumlah favorite</string>
    <string name="sort_comment">Jumlah komen</string>
    <string name="sort_suplemen">Materi suplemen</string>
    <string name="sort_kasus">Materi kasus</string>
    <string name="sort_video">Materi video</string>
    <string name="filter_materi">Konten materi</string>
    <string name="filter_berita">Konten berita</string>
    <string name="angka_dummy">1</string>
    <string name="download_mulai">Berkas mulai diunduh</string>
    <string name="download_dimulai">Berkas mulai diunduh</string>
    <string name="download_sedang_diunduh">Berkas sedang diunduh</string>
    <string name="download_selesai_diunduh">Selesai mengunduh silahkan buka file manager untuk membuka berkas.</string>
    <string name="error_jaringan">Telah terjadi kesalahan pada jaringan ke server. Mohon coba beberapa saat lagi.</string>
    <string name="error_tidak_ada_koneksi_internet">Mohon cek kembali koneksi internet Anda.</string>
    <string name="ok_button">Ok</string>
    <string name="yes_button">Ya</string>
    <string name="no_button">Tidak</string>
    <string name="menu_challenge">Challenge</string>
    <string name="title_activity_challenge">Challenge</string>
    <string name="pilih_challenge">Pilih Challange: </string>
    <string name="expire_label">Tenggat Waktu :</string>
</resources>
