<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <!--<item android:id="@+id/pop_up_sort"
        android:title="@string/menu_sort"/>-->
    <!--<item android:id="@+id/pop_up_notifikasi"
        android:title="@string/menu_notification"/>-->
    <item android:id="@+id/pop_up_quiz"
        android:title="@string/menu_quiz"/>
    <item android:id="@+id/pop_up_leaderboard"
        android:title="@string/menu_leaderboard"/>
    <!--<item android:id="@+id/pop_up_edit_profile_slidingtab"
        android:title="@string/menu_profile"/>-->
    <item android:id="@+id/pop_up_log_out_slidingtab"
        android:title="@string/menu_log_out"/>


</menu>