<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="login"
            type="id.pptik.ilham.sahabatbawaslu.view_models.UserViewModel"/>
        <variable
            name="loginevent"
            type="id.pptik.ilham.sahabatbawaslu.view_models.UserViewModel"/>
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.pptik.ilham.sahabatbawaslu.features.login.LoginActivity"
    android:orientation="vertical"
    android:weightSum="3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">
        <id.pptik.ilham.sahabatbawaslu.features.ui.CircleView
            android:id="@+id/custom_circle_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:id="@+id/logo_bawaslu"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/logo_bawaslu"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1.5"
        >
        <TextView
            android:id="@+id/text_view_email"
            android:text="@string/email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_view_password"
            android:text="@string/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/masuk_label"
            android:textColor="@color/putih"
            android:background="@color/oranyeGelap"
            />
        <RelativeLayout
            android:layout_marginTop="13dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/text_view_belum_punya_akun"
                android:text="@string/belum_punya_akun_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/text_view_daftar"
                android:text="@string/daftar_label"
                android:layout_width="wrap_content"
                android:textColor="@color/oranyeGelap"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/text_view_belum_punya_akun"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
</layout>