<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_margin="8dp">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        card_view:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <View
            android:id="@+id/label_color_news"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/news_dashboard_mark"
            android:visibility="invisible"
            />
        <View
            android:id="@+id/label_color_material"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/material_dashboard_mark"
            android:visibility="invisible"
            />
        <ImageView
            android:id="@+id/user_picture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:foregroundGravity="right"
            android:layout_below="@+id/label_color"
            android:src="@drawable/recycleview_user" />
        <TextView
            android:id="@+id/username"
            android:layout_width="120dp"
            android:text="@string/username_label"
            android:layout_alignTop="@id/user_picture"
            android:layout_toRightOf="@id/user_picture"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:textColor="@color/abu"/>
        <TextView
            android:id="@+id/date_post"
            android:layout_width="120dp"
            android:text="@string/date_label"
            android:layout_below="@+id/username"
            android:layout_toRightOf="@+id/user_picture"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/abu"/>
        <!--<ImageView
            android:id="@+id/thumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:foregroundGravity="right"
            android:layout_below="@+id/user_picture"

            android:src="@drawable/recycleview_thumbnail"
            android:layout_marginLeft="10dp"
            android:layout_alignTop="@+id/title_post"
            android:layout_alignParentRight="true"
            />-->
        <TextView
            android:id="@+id/post_label"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:foregroundGravity="center_horizontal"
            android:layout_below="@+id/user_picture"
            android:layout_marginLeft="10dp"
            android:layout_alignTop="@+id/title_post"
            android:layout_alignParentRight="true"
            android:text="@string/material_author_label"
            />
        <TextView
            android:id="@+id/title_post"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_below="@+id/user_picture"
            android:layout_toLeftOf="@id/post_label"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/post_title_label"

            android:layout_height="wrap_content"
            android:textColor="@color/hitam"/>
        <TextView
            android:id="@+id/content_post"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:text="@string/post_content_label"
            android:layout_below="@+id/title_post"
            android:textColor="@color/abu"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/post_label"/>


    </RelativeLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
