<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:grid="http://schemas.android.com/tools"
    android:gravity="center_vertical"
    android:layout_margin="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_comment_level_0"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:id="@+id/main_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/text_view_quiz_level_label"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:foregroundGravity="right"
                            android:text="@string/level"
                            android:textAlignment="center"
                            />
                        <TextView
                            android:id="@+id/text_view_quiz_level"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:textSize="27sp"
                            android:src="@drawable/recycleview_user"
                            android:text="@string/peringkat"
                            android:textAlignment="center"
                            android:layout_below="@id/text_view_quiz_level_label"/>

                        <TextView
                            android:id="@+id/text_view_quiz_title"
                            android:layout_width="wrap_content"
                            android:text="@string/username_label"
                            android:layout_alignTop="@id/image_view_thubmnail"
                            android:layout_toRightOf="@id/text_view_quiz_level_label"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_marginLeft="15dp"
                            android:textColor="@color/abu"/>
                        <TextView
                            android:id="@+id/text_view_quiz_desc"
                            android:layout_width="wrap_content"
                            android:text="@string/poin"
                            android:textSize="20sp"
                            android:textStyle="normal"
                            android:fontFamily="sans-serif-light"
                            android:layout_marginLeft="15dp"
                            android:layout_below="@id/text_view_quiz_title"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/text_view_quiz_level_label"
                            android:textColor="@color/abu"
                            android:visibility="visible"/>
                        <Button
                            android:id="@+id/button_take_quiz"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/text_view_quiz_desc"
                            android:layout_alignLeft="@id/text_view_quiz_desc"
                            android:text="@string/take_quiz_label"
                            android:textColor="@color/putih"
                            android:background="@drawable/ripple_effect"
                            android:layout_marginTop="20dp"
                            android:onClick="@{(v)->loginevent.onClickLogin()}"
                            />
                        <TextView
                            android:id="@+id/text_view_quiz_score"
                            android:layout_width="match_parent"
                            android:textAlignment="textEnd"
                            android:text="@string/quiz_score_label"
                            android:textStyle="normal"
                            android:fontFamily="sans-serif-light"
                            android:layout_marginLeft="15dp"
                            android:layout_below="@id/text_view_quiz_desc"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/button_take_quiz"
                            android:textColor="@color/oranyeTerang"
                            android:layout_marginTop="20dp"
                            android:visibility="visible"/>
                        <TextView
                            android:id="@+id/text_view_quiz_total_score"
                            android:layout_width="match_parent"
                            android:textAlignment="textEnd"
                            android:text="@string/quiz_total_score_label"
                            android:textStyle="normal"
                            android:fontFamily="sans-serif-light"
                            android:layout_marginLeft="15dp"
                            android:layout_below="@id/text_view_quiz_score"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/button_take_quiz"
                            android:textColor="@color/oranyeTerang"
                            android:layout_marginTop="5dp"
                            android:visibility="visible"/>
                    </RelativeLayout>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/awan"
                    ></View>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</FrameLayout>
