<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="forums"
            type="id.pptik.ilham.sahabatbawaslu.view_models.ForumsViewModel"/>
        <variable
            name="addforumsevent"
            type="id.pptik.ilham.sahabatbawaslu.commands.ForumsInterface"/>
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="id.pptik.ilham.sahabatbawaslu.features.forum.AddForumActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/oranyeTerang"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"></android.support.v7.widget.Toolbar>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText"
                android:text="@={forums.title}"
                android:hint="@string/caption_forum_label"/>
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/imageButtonAddHashtag"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_add_white_24dp"
                />
            <TextView
                android:layout_toRightOf="@id/imageButtonAddHashtag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:text="@string/tambah_hashtag_label"/>
        </RelativeLayout>
        <Button
            android:id="@+id/button_masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/submit_label"
            android:textColor="@color/putih"
            android:background="@drawable/ripple_effect"
            android:onClick="@{(v)->addforumsevent.onClickAddForums()}"
            />
    </LinearLayout>
</LinearLayout>
</layout>