<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:grid="http://schemas.android.com/tools"
    android:gravity="center_vertical"
    android:layout_margin="8dp">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/main_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/user_picture"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:foregroundGravity="right"
                    android:layout_below="@+id/label_color_news"
                    android:src="@drawable/recycleview_user" />
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:text="@string/username_label"
                    android:layout_alignTop="@id/user_picture"
                    android:layout_toRightOf="@id/user_picture"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/abu"/>
                <TextView
                    android:id="@+id/comment_content"
                    android:layout_width="match_parent"
                    android:text="@string/post_content_label"
                    android:layout_below="@id/username"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/username"
                    android:textColor="@color/abu"
                    android:visibility="visible"/>
                <TextView
                    android:id="@+id/date_post"
                    android:layout_width="match_parent"
                    android:text="@string/date_label"
                    android:layout_below="@+id/comment_content"
                    android:layout_toRightOf="@+id/user_picture"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/abu"
                    android:visibility="visible"
                    android:layout_marginTop="5dp"
                    />

                </RelativeLayout>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/awan"
                ></View>
        </LinearLayout>



    </android.support.v7.widget.CardView>
</FrameLayout>
